Modified index file

--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
 <head>
   <title>Page Title</title>
   <meta charset="UTF-8"/>
-  <script src="js-file.js" defer></script>
+  <script src="rock-paper-scissors.js" defer></script>
 </head>
 <body>
-  <div id = 'container'>
-    <button id = 'btn'>Click me</button>
-  </div>
 </body>
 </html>
