--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
   <script src="rock-paper-scissors.js" defer></script>
 </head>
 <body>
+  <button id = "rock">Rock</button>
+  <button id = "paper">Paper</button>
+  <button id = "scissors">Scissors</button>
+  <div id = "container"></div>
 </body>
 </html>
